tests/fail/ownershipTestImmutBorrowFail.rs


let s : String = "hello";
let x : &String = &s; 
x;
s;
